
2013-October-26 Struan Robertson

	* AnalyticalRepresentation.cpp: Altered analytical representation to 
	allow for different pressure units. 

2013-October-26 Struan Robertson

	* CollisionOperator.cpp, and all derived reaction classes: removed the 
	(temporary) method that got the reduced collision operator size. 

	* MicroRate.h and dreived classes: renamed microcanoical flux method to
	make it clearer what it does.
	
2013-October-25 Struan Robertson

	* CollisionOperator.cpp, and all derived sink reaction classes: Fix for 
	irreversible exchange reaction broken during refactoring. 
	
2013-October-15 Struan Robertson

	* CollisionOperator.cpp, MolecularComponent.h/.cpp and all derived reaction 
	classes: Final refactoring changes to make the code more transparent to 
	reservoir states. 
	
2013-October-13 Struan Robertson

	* AnalyticalRepresentation.cpp: Analytical representation output altered 
	to be consistent with Cantera format. Baselines added.
	
2013-October-12 Struan Robertson

	* CollisionOperator.cpp, MolecularComponent.h/.cpp and all derived reaction 
	classes: More refactoring changes to make the code more transparent to 
	reservoir states. 
	
2013-September-30 Robin Shannon

	*SensitivityAnalysis.cpp, Rdouble.h: Changed SensitvityAnalysis to read
	errors from Rdouble ranges. Rdouble.h changed to allow SensitivityAnalysis
	read upper and lower values.

2013-September-28 Struan Robertson

	* CollisionOperator.cpp, MolecularComponent.h/.cpp: Refactoring changes
	to make the code more transparent to reservoir states. These changes 
	are likely to be the first in a series of changes.
	
2013-September-25 Struan Robertson

	* sobol.h/.cpp: Move sobol array initialization to .cpp file in order to 
	improve compilation time.
	
2013-September 13 Chris Morley

	* src/Reaction.h, src/Molecule.h,.src/plugin.h: remove obsolete Base.h

	* src/MicroRate.h, src/plugins/MesmerILT.cpp: use as plugin example files
	  by adding add verbose comment.
