@@ -55,7 +55,8 @@
   <me:DistributionCalcMethod default="true" name="Boltzmann"/>
   <me:excessReactantConc default="NEEDS TO BE CHECKED**">2.25e+16</me:excessReactantConc>
   <!--<me:precision default="true">double</me:precision>-->
-  <me:PTPair precision="d" P="1.01E17" T="299" default="true"/>
+  <me:Rubbish precision="dd" default="true"/>
+  <me:PTpair precision="d" P="1.01E17" T="299" default="true"/>
   <me:bathgas default="true">He</me:bathgas>
   <me:TInfinity default="true">298</me:TInfinity>
   <me:eigenvalues default="true">0</me:eigenvalues>
@@ -72,5 +73,6 @@
   <me:ConstraintAddand default="true">0.0</me:ConstraintAddand>
   <me:SensitivityAnalysisIterations>10</me:SensitivityAnalysisIterations>
   <me:SensitivityAnalysisDelta>2</me:SensitivityAnalysisDelta>
+  <me:chebNumConc units="particles per cubic centimeter"/> 
 </defaults>
 
